@@ -1,4 +1,5 @@
 Development
+	If http is found in the URL it may not be a stream (this might break some sites)
 	Get status messages looking better, requires gnome-mplayer from SVN on same date
 	Disable Windows OnDSPlayStateChangeEvt callback
 	Emulate WMP status
